remove duplicated code, fix taack-ui-test runtime