@@ -1,18 +1,13 @@
 plugins {
+    id 'org.springframework.boot'
     id 'taack-grails-webapp'
     id 'org.graalvm.buildtools.native'
 }
 
-group = "taack.ui.test"
+group = "taack.ui.test.minimal"
 
 dependencies {
     implementation "org.apache.grails:grails-spring-security:${grailsSpringSecurity}"
-
-    implementation 'commons-io:commons-io:2.18.0'
-    implementation "org.asciidoctor:asciidoctorj:${asciidoctorJ}"
-    implementation 'org.asciidoctor:asciidoctorj-pdf:2.3.19'
-    implementation 'org.asciidoctor:asciidoctorj-diagram:2.3.1'
-    implementation 'org.asciidoctor:asciidoctorj-revealjs:5.1.0'
 }
 
 grails {
@@ -20,14 +15,11 @@ grails {
     exploded = true
     plugins {
         implementation project(':taack-ui')
-        implementation project(':taack-ui-pdf')
-        implementation project(':taack-ui-search')
     }
 }
 
 bootJar {
     enabled = true
-    requiresUnpack '**/asciidoctorj*.jar'
 }
 
 //application {
@@ -56,10 +48,10 @@ graalvmNative {
     binaries.main {
         mainClass = 'taack.ui.test.Application'
         buildArgs.addAll(
-                '--no-fallback',
-                '--initialize-at-build-time=org.apache.sshd.common.file.root.RootedFileSystemProvider',
-                '--initialize-at-build-time=org.apache.sshd.sftp.client.fs.SftpFileSystemProvider',
-                '--initialize-at-build-time=ch.qos.logback.classic.Logger',
+//                '--no-fallback',
+//                '--initialize-at-build-time=org.apache.sshd.common.file.root.RootedFileSystemProvider',
+//                '--initialize-at-build-time=org.apache.sshd.sftp.client.fs.SftpFileSystemProvider',
+//                '--initialize-at-build-time=ch.qos.logback.classic.Logger',
                 '-O3', '-march=native', '--link-at-build-time')
         configurationFileDirectories.from(file('src/graalvm'))
     }
@@ -69,7 +61,12 @@ graalvmNative {
     }
 }
 
+tasks.nativeCompileClasspathJar {
+    setProperty("zip64", true)
+}
+
 /**
+ *  ~/.jdks/openjdk-24.0.1/bin/java -XX:+UnlockExperimentalVMOptions -XX:+UseCompactObjectHeaders -Xmx512m -jar taack-ui-test-minimal.jar
  * ~/.jdks/graalvm-jdk-24.0.1/bin/java -agentlib:native-image-agent=config-output-dir=test -jar taack-ui-test.jar
  * ~/.jdks/graalvm-jdk-24.0.1/bin/native-image --initialize-at-build-time=org.springframework.boot.loader.nio.file.NestedFileSystemProvider -O3 --link-at-build-time -H:ConfigurationFileDirectories=test -jar taack-ui-test.jar
  * ~/.jdks/graalvm-jdk-24.0.1/bin/native-image --no-fallback --initialize-at-build-time=org.springframework.boot.loader.nio.file.NestedFileSystemProvider -O3 --link-at-build-time -H:ConfigurationFileDirectories=test -jar taack-ui-test.jar
